<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="brouser">Browser</string>
    <string name="nav_data">Лев</string>
    <string name="nav_back">Back</string>
    <string name="menu_sensor">Датчики</string>
    <string name="menu_camera">Камера</string>
    <string name="menu_microphone">Микрофон</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_file">Работа с файлами</string>
    <string name="fab_add_description">Добавить</string>
    <string name="firebase_auth_label">Авторизация</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="enter_email_password">Введите email и пароль</string>
    <string name="sign_in_success">Вход выполнен</string>
    <string name="sign_up_success">Регистрация успешна</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>