<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_data" />

        <item
            android:id="@+id/nav_brouser"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/brouser" />

        <item
            android:id="@+id/nav_back"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_back" />

        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/ic_sensor"
            android:title="Датчики" />

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="Камера" />

        <item
            android:id="@+id/nav_microphone"
            android:icon="@drawable/ic_microphone"
            android:title="Микрофон" />

    </group>
</menu>