<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ru.mirea.lamzin.mireaproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ru.mirea.lamzin.mireaproject.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ru.mirea.lamzin.mireaproject.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_brouser"
        android:name="ru.mirea.lamzin.mireaproject.WebViewFragment"
        android:label="fragment_nav_brouser"
        tools:layout="@layout/fragment_web_view" />
    <fragment
        android:id="@+id/nav_data"
        android:name="ru.mirea.lamzin.mireaproject.DataFragment"
        android:label="fragment_data"
        tools:layout="@layout/fragment_data" />
    <fragment
        android:id="@+id/nav_back"
        android:name="ru.mirea.lamzin.mireaproject.BackgroundTaskFragment"
        android:label="fragment_back"
        tools:layout="@layout/fragment_background_task" />

    <fragment
        android:id="@+id/nav_sensor"
        android:name="ru.mirea.lamzin.mireaproject.SensorFragment"
        android:label="Sensor"
        tools:layout="@layout/fragment_sensor" />

    <fragment
        android:id="@+id/nav_camera"
        android:name="ru.mirea.lamzin.mireaproject.CameraFragment"
        android:label="Camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/nav_microphone"
        android:name="ru.mirea.lamzin.mireaproject.MicrophoneFragment"
        android:label="Microphone"
        tools:layout="@layout/fragment_microphone" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="ru.mirea.lamzin.mireaproject.ProfileFragment"
        android:label="Профиль"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_file"
        android:name="ru.mirea.lamzin.mireaproject.FileFragment"
        android:label="Работа с файлами"
        tools:layout="@layout/fragment_file" />

    <fragment
        android:id="@+id/firebaseAuthFragment"
        android:name="ru.mirea.lamzin.mireaproject.FirebaseAuthFragment"
        android:label="Авторизация"
        tools:layout="@layout/fragment_firebase_auth" >
        <action
            android:id="@+id/action_firebaseAuthFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/network"
        android:name="ru.mirea.lamzin.mireaproject.NetworkInfoFragment"
        android:label="Network"
        tools:layout="@layout/fragment_network_info" />

</navigation>